--- a/LearnPokemonApi/LearnPokemonApi.csproj
+++ b/LearnPokemonApi/LearnPokemonApi.csproj
@@ -1,8 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="5.0.0"/>
+  </ItemGroup>
+  <ItemGroup>
+ <EmbeddedResource Include="appsettings.json" />
+</ItemGroup>
 </Project>
